# bayesian-first-aid

./: pyproject.toml
bayesianfirstaid/: README.md  pyproject.toml
bayesianfirstaid/src/bayesianfirstaid/: proptest.py
src/bayesianfirstaid/: __init__.py
