[project]
name = "bayesianfirstaid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Garrett Mooney", email = "garrettrmooney@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.21.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pymc>=5.21.1",
    "scipy>=1.15.2",
]

[project.scripts]
bayesianfirstaid = "bayesianfirstaid:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
